
[FEATURE] Code for single VLAN tagging an priority codes is working (double tag/QinQ needs further research)

[FEATURE] Both hosts display the number of non-test frames received during a test

[FEATURE] Code for interface selection by index and by name is now working

[FEATURE] Added rate limit in bits per second using -M option (previously just -m for bytes per second)

[MAJOR] Finalised delay calculation code (calculates mean delay based on 5 samples)

[MINOR] Fixed the interface selection by ID/index

[MINOR] TX host can receive dying gasp from RX (RX could already recieve dying gasp from TX)

[MINOR] Fixed hanging of RX host on recv()

[MINOR] Further clean up of code



-----Etherate 0.3 Alpha - 2014-01-10

[FEATURE] Add code for testing with VLAN tagging, priority codes, QinQ tagging and QinQ priorities, -v 25 -p 3 -q 2025 -o 4

[MAJOR] Sometimes locking to the wrong interface such as "eth0" even though it was disabled or disconnected and specifically selecting another interface like "wlan0" (for example)

[MAJOR] Promiscuous mode was not entering/exiting properly. Rather than XOR IFF_PROMISC on and off, copy interface flags to ifFlags then OR IFF_PROMISC, then restore the stored ifFlags value. Looks like a problem with ifreq.

[MINOR] Typos in the CLI output

[MINOR] Further clean up of code

[MINOR] Standardise changelog tags;
[FEATURE]  == New working feature added to etherate
[MAJOR]    == Fixed a bug in Etherate code that effects the operations of the program or one of the test modes or test results
[MINOR]    == Fixed a bug that doesn't stop Etherate from running properly like typos, formatting, documentation errata, code tidies



-----Etherate 0.2 Alpha - 2013-06-30

[MAJOR] Added promiscuous mode, frames addressed anything other than FF:FF:FF:FF:FF:FF and the NICs burnt in address wasn't being received but were being sent (e.g. TX wasn't receiving dst==00:04:00:00:00:01)
