@@ -68,10 +68,12 @@ void print_usage () {
             "[Mode] By default run in transmit mode, not receive\n"
             "\t-r\tChange to receive (listening) mode.\n"
             "[Destination]\n"
-            "\t-d\tWithout this we default to 00:00:5E:00:00:02\n"
-            "\t\tas the TX host and :01 as the RX host.\n"
-            "\t\tSpecify a custom desctination MAC address, \n"
+            "\t-d\tSpecify a custom desctination MAC address, \n"
             "\t\t-d 11:22:33:44:55:66\n"
+            "\t\tWithout this we default to 00:00:5E:00:00:02\n"
+            "\t\tas the TX host and :01 as the RX host.\n"
+            "\t-g\tTX host skips settings synchronisation with RX host\n"
+            "\t\tand begins transmitting regardless of RX state.\n"
             "[Source]\n"
             "\t\tSpecify a custom source MAC address, -s 11:22:33:44:55:66\n"
             "\t-i\tSet interface by name. Without this option we guess which\n"
@@ -93,10 +95,11 @@ void print_usage () {
             "\t-e\tSet a custom ethertype value the default is 0x0800 (IPv4).\n"
             "\t-f\tFrame payload size in bytes, default is %d\n"
             "\t\t(%d bytes is the expected size on the wire with headers).\n"
-            "\t-m\tMax bytes per/second to send, -m 125000 (1Mbps).\n"
+            "\t-m\tMax bytes per/second to send, -m 125000 (1Mps).\n"
+            "\t-M\tMax bits per/second to send. -M 1000000 (1Mbps).\n"
             "\t-t\tTransmition duration, integer in seconds, default is %ld.\n"
             "[Other]\n"
-            "\t-v\tAdd an 802.1q VLAN tag. By default none is in the header.\n"
+            "\t-v\tAdd an 802.1q VLAN tag. None in the header by default.\n"
             "\t\tIf using a PCP value with -p a default VLAN of 0 is added.\n"
             "\t-p\tAdd an 802.1p PCP value from 1 to 7 using options -p 1 to\n"
             "\t\t-p 7. If more than one value is given, the highest is used.\n"
